--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="homepage_article2">
 
         <article class="article_night">
-          <img class="main_img" src="img/florence-nightingale.jpeg">
+          <img class="main_img" src="img/florence-nightingale.jpg">
           <h3 class="bottom-left2">Learn About Florence Nightingale</h3>
 
         </article>
@@ -97,7 +97,7 @@
       <article class="article_welcome">
 
         <h3>All are Welcome to Visit</h3>
-<img src="img/museum.jpeg">
+<img src="img/museum.jpg">
         <p>Families are welcome to come and learn all there is to know about nursing</p>
         
       </article>
