--- a/Exhibits.html
+++ b/Exhibits.html
@@ -70,7 +70,7 @@
         <p class="article__description">Come see all the amazing pins worn by the numerous nurses and what each represent and their significance .</p>
       </article>
       <article class="article__exhibits">
-        <img src="img/florence-nightingale.jpeg" class="article__img" alt="Florence Nightingale">
+        <img src="img/florence-nightingale.jpg" class="article__img" alt="Florence Nightingale">
         <p class="article__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </article>
 
